# plsh

./: .gitignore  Cargo.toml  Makefile  facts.md  readme.md  readme.ru.md  readme_crates.md  readme_ru.md  todo.md
core/src/: lib.rs
res/: install.sh
src/: cmd.rs  exec.rs  main.rs  plsh.rs  shime.rs
src/plsh/func/: dir.rs
src/shime/: func.rs  prompt.rs  read.rs  tokenize.rs
src/shime/func/: bye.rs  dir.rs  say.rs
src/shime/prompt/: cargo.rs  dir.rs  dye.rs  get.rs  git.rs  sudo.rs
src/shime/prompt/git/: alt_conf.rs  get.rs
