[package]
name = "shime"
description = "✨ little shell for you"
authors = ["Dmitrij Sinicin <h1kk4r@yandex.ru>"]
readme = "readme_crates.md"
homepage = "https://h1kkar.github.io/p/shime"
repository = "https://github.com/h1kkar/shime.git"
license = "AGPL-3.0-only"
keywords = ["shell", "cd", "prompt"]
categories = ["command-line-utilities"]
exclude = ["facts.md", "private_todo.md", ".gitignore", "todo.md", "todo", "readme.md"]
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.0"