[package]
name = "shime"
description = "✨ little shell for you"
authors = ["Dmitrij Sinicin <h1kk4r@yandex.ru>"]
readme = "readme.md"
homepage = "https://github.com/h1kkar/shime"
repository = "https://github.com/h1kkar/shime.git"
license = "AGPL-3.0-only"
keywords = ["shell", "cd", "prompt"]
categories = ["command-line-utilities"]
exclude = ["facts.md", "private_todo.md", ".gitignore", "todo.md", "todo"]
version = "0.0.4"
edition = "2021"

[dependencies]
dirs = "5.0.0"
rand = "0.8.5"
git_info = "0.1.2"
ansi-colors = "0.3.0"
tsu = "1.0.1"
toml = "0.7.6"
rustyline = "12.0.0"
